add swagger authorization
